--- a/docs/sinai_entities/style.css
+++ b/docs/sinai_entities/style.css
@@ -489,6 +489,7 @@ path {
 
 .im-n-text a {
   color: #2196f3;
+  cursor: pointer !important;
 }
 
 pre.im-n-text {
@@ -1046,7 +1047,7 @@ tspan.forcedPolygonFill {
 
 .tree__item {
   display: flex;
-  margin: 0px 5px 0px 0px;
+  margin: 0px 0px 0px 0px;
   width: fit-content;
   font-size: 10px;
   position: relative;
@@ -1217,7 +1218,7 @@ tspan.forcedPolygonFill {
 .tree__item__sub {
   display: inline-block;
   margin: 0;
-  left: -5px;
+  left: 0px;
   position: relative;
   align-self: center;
 }
